Changing preview card container's height to prevent overlap of next element

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
 .container {
     margin: auto;
     max-width: 600px;
-    height: 100vh;
+    height: 95vh;
     display: flex;
     align-items: center;
 }
